--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,16 @@
   },
   "main": "index.js",
   "dependencies": {
+    "busboy": "^1.4.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "formidable-serverless": "^1.1.1",
+    "long": "^5.2.3",
+    "multer": "^1.4.5-lts.1",
+    "os": "^0.1.2",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
