--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,6 +5,7 @@
       "target": "ES2020",
       "sourceMap": true,
       "outDir": "dist",
+      "skipLibCheck": true
   },
   "include": ["src/**/*"],
 }
